--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ contourpy==1.3.3
 cycler==0.12.1
 dj-database-url==3.0.1
 Django==5.2.4
+django-heroku==0.3.1
 fonttools==4.59.2
 gunicorn==23.0.0
 kiwisolver==1.4.9
@@ -12,6 +13,7 @@ numpy==2.3.2
 packaging==25.0
 pandas==2.3.2
 pillow==11.3.0
+psycopg2==2.9.10
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
@@ -19,4 +21,3 @@ six==1.17.0
 sqlparse==0.5.3
 tzdata==2025.2
 whitenoise==6.9.0
-psycopg2-binary==2.8.6
